[gd_scene load_steps=4 format=3 uid="uid://bn262vdj37am2"]

[ext_resource type="PackedScene" uid="uid://vg8so2noge5l" path="res://menu_and_options/_options_menu/base_option_container.tscn" id="1_2jppr"]
[ext_resource type="Script" path="res://menu_and_options/_options_menu/control/controls_options.gd" id="2_byjrj"]

[sub_resource type="LabelSettings" id="LabelSettings_a46hf"]
font_size = 25

[node name="ControlsOptions" instance=ExtResource("1_2jppr")]
script = ExtResource("2_byjrj")

[node name="ScrollContainer" type="ScrollContainer" parent="." index="1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.8

[node name="ButtonsContainer" type="VBoxContainer" parent="ScrollContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KeyPressPopup" type="ColorRect" parent="." index="2"]
visible = false
self_modulate = Color(1, 1, 1, 0.858824)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="KeyPressPopup" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press a key"
label_settings = SubResource("LabelSettings_a46hf")

[node name="Haptics" type="CheckBox" parent="." index="3"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.670139
anchor_top = 0.0941358
anchor_right = 0.835069
anchor_bottom = 0.131173
button_pressed = true
text = "Controller Vibration"
metadata/_edit_use_anchors_ = true

[connection signal="toggled" from="Haptics" to="." method="_on_haptics_toggled"]
